add notify